--- a/midterm/midterm.ipynb
+++ b/midterm/midterm.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "FruF9Ry1fIHF"
+        "id": "50wuN3gB4kLV"
       },
       "source": [
         "### Mid-term for HDS5210\n",
@@ -44,21 +44,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 14,
       "metadata": {
-        "id": "XkrDFfvXfIHH"
+        "id": "kn8oE9Li4kLX"
       },
       "outputs": [],
       "source": [
         "import doctest\n",
-        "import csv\n",
-        "import json"
+        "import json\n",
+        "import csv"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aBG8fgnafIHI"
+        "id": "N9b9QE6s4kLY"
       },
       "source": [
         "### Step 1: Calculate BMI"
@@ -66,42 +66,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 15,
       "metadata": {
-        "id": "esqkkk3nfIHI"
+        "id": "_uPmkiUq4kLY"
       },
       "outputs": [],
       "source": [
-        "import doctest\n",
-        "\n",
         "def calculate_bmi(height_m, weight_kg):\n",
-        "  \"\"\"\n",
-        "  calculate body mass index\n",
+        "    \"\"\"\n",
+        "    calculate Body Mass Index (BMI)\n",
         "\n",
-        "  parameters:\n",
-        "    weight_kg (float):weight in kilograms\n",
-        "    height_m (float) :heiht in meters\n",
+        "    BMI = Weight (kg)/ (height (m)^2)\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "  >>> calculate_bmi(1.80, 70)\n",
-        "  22.857142857142858\"\"\"\n",
-        "\n",
-        "  if not (0 < height_m < 3):\n",
-        "    raise ValueError\n",
-        "  if not (0 < weight_kg < 500):\n",
-        "    raise ValueError\n",
-        "\n",
-        "  return weight_kg / (height_m ** 2)"
+        "    >>> calculate_bmi(70,1.75)\n",
+        "    22.86\n",
+        "    >>> calculate_bmi(90,1.6)\n",
+        "    35.16\n",
+        "    >>> calculate_bmi(0,1.75)\n",
+        "    Traceback (most recent call list):\n",
+        "       ...\n",
+        "    ValueError: Weight and Height cannot be zero\n",
+        "    >>> calculate_bmi(1.75,0)\n",
+        "    Traceback (most recent call list):\n",
+        "       ...\n",
+        "    ValueError: Weight and Height must be greater than zero\n",
+        "    \"\"\"\n",
+        "    if height_m == 0 or weight_kg == 0:\n",
+        "        raise ValueError(\"Weight and Height must be greater than zero\")\n",
+        "    bmi=weight_kg / (height_m ** 2)\n",
+        "    return round(bmi,2)\n",
+        ""
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "P8hMYd5NfIHJ"
+        "id": "RA-o3T9b4kLY"
       },
       "source": [
         "### Step 2: Calculate BODE Score"
@@ -109,54 +109,68 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 16,
       "metadata": {
-        "id": "WTvoHMYtfIHJ"
+        "id": "Jco9cKDc4kLZ"
       },
       "outputs": [],
       "source": [
-        "def calculate_bode_score(fev_pct, bmi):\n",
-        "  \"\"\"\n",
-        "  if not (0 <= fev_pct <= 100):\n",
-        "    raise ValueError\n",
-        "  if dyspnea_description == \"dyspnea\":\n",
-        "    raise ValueError\n",
-        "  if distance_in_meters < 0:\n",
-        "    raise ValueError\n",
-        "  \"\"\"\n",
-        "  #fev scoring\n",
-        "  if fev_pct >= 95:\n",
-        "    fev_score = 4\n",
-        "  elif fev_pct >= 90:\n",
-        "    fev_score = 3\n",
-        "  elif fev_pct >= 80:\n",
-        "    fev_score = 2\n",
-        "  else:\n",
-        "    fev_score = 1\n",
+        "def calculate_bode_score(fev_pct, bmi, distance_in_meters,dyspnea_description):\n",
+        "    \"\"\"\n",
+        "    calculate BODE Score based on the BMI,FEV1%,dyspnea,and 6-minute walk distance.\n",
         "\n",
-        "  #scoring for dyspnea\n",
-        "  dyspnea_score= dyspnea_description\n",
+        "    >>> calculate _bode_score(22,40,'SEVERE',300)\n",
+        "    4\n",
+        "    >>> calculate_bode_score(30,60,MILD,200)\n",
+        "    1\n",
+        "    \"\"\"\n",
+        "    bode_score=0\n",
         "\n",
-        "  #scoring for distance\n",
-        "  if distance_in_meters < 100:\n",
-        "    distance_score =0\n",
-        "  elif distance_in_meters < 200:\n",
-        "    distance_score = 1\n",
-        "  elif distance_in_meters < 300:\n",
-        "    distance_score = 2\n",
-        "  else:\n",
-        "    distance_score = 3\n",
+        "    # BMI POINTS\n",
+        "    if bmi > 21:\n",
+        "        bode_score += 0\n",
+        "    else:\n",
+        "        bode_score += 1\n",
         "\n",
-        "    #total bode score\n",
-        "  return fev_score + distance_score + dyspnea_score\n",
         "\n",
-        "\n"
+        "    # FEV1% points\n",
+        "    if fev_pct >=65:\n",
+        "        bode_score += 0\n",
+        "    elif 50 <= fev_pct < 65:\n",
+        "        bode_score += 1\n",
+        "    elif 36 <= fev_pct < 50:\n",
+        "        bode_score += 2\n",
+        "    else:\n",
+        "        bode_score += 3\n",
+        "\n",
+        "    # Dyspnea points\n",
+        "    if dyspnea_description == 'NONE':\n",
+        "        bode_score += 0\n",
+        "    elif dyspnea_description == 'MILD':\n",
+        "        bode_score += 1\n",
+        "    elif dyspnea_description == 'MODERATE':\n",
+        "        bode_score += 2\n",
+        "    else:\n",
+        "        bode_score += 3\n",
+        "\n",
+        "    # Distance walked points\n",
+        "    if distance_in_meters < 350:\n",
+        "        bode_score += 0\n",
+        "    elif 250 <= distance_in_meters < 350:\n",
+        "        bode_score += 1\n",
+        "    elif 200 <= distance_in_meters < 250:\n",
+        "        bode_score += 2\n",
+        "    else:\n",
+        "        bode_score += 3\n",
+        "\n",
+        "    return bode_score\n",
+        ""
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5vSbyOvVfIHJ"
+        "id": "xaXj8IBv4kLZ"
       },
       "source": [
         "### Step 3: Calculate BODE Risk"
@@ -164,31 +178,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 17,
       "metadata": {
-        "id": "53BCqF_bfIHJ"
+        "id": "OKig0_1y4kLZ"
       },
       "outputs": [],
       "source": [
         "def calculate_bode_risk(bode_score):\n",
+        "    \"\"\"\n",
+        "    calculate BODE Survival Risk based on the BODE Score.\n",
         "\n",
-        "  \"\"\"calculate the bode risk\"\"\"\n",
-        "  if bode_score <= 2:\n",
-        "    return \"low risk\"\n",
-        "  elif bode_score <= 4:\n",
-        "    return \"medium risk\"\n",
-        "  elif bode_score <= 6:\n",
-        "    return \"high risk\"\n",
-        "  else :\n",
-        "    return \"very high risk\"\n",
-        "\n",
-        ""
+        "    >>> calculate_bode_risk(1)\n",
+        "    '80-90%'\n",
+        "    >>> calculate_bode_risk(4)\n",
+        "    '35-50%'\n",
+        "    \"\"\"\n",
+        "    if bode_score == 0 or bode_score == 1:\n",
+        "        return '80-90%'\n",
+        "    elif bode_score == 2 or bode_score == 3:\n",
+        "        return '70-80%'\n",
+        "    elif bode_score == 4 or bode_score == 5:\n",
+        "        return '50-70%'\n",
+        "    elif bode_score == 6 or bode_score == 7:\n",
+        "        return '35-50%'\n",
+        "    else:\n",
+        "        return 'HIGH RISK,< 35%'"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "V6sLhY6BfIHJ"
+        "id": "-KMI5Ktj4kLZ"
       },
       "source": [
         "### Step 4: Load Hospital Data"
@@ -196,21 +216,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 18,
       "metadata": {
-        "id": "_CgelziffIHJ"
+        "id": "BBMfbV0x4kLZ"
       },
       "outputs": [],
       "source": [
-        "def load_hospital_data(hospital_json):\n",
-        "  with open(hospital_json) as f:\n",
-        "    return json.load(f)"
+        "def load_patient_data(file_path):\n",
+        "    \"\"\"\n",
+        "    Load patient data from a CSV file and return a list of dictionaries.\n",
+        "    Each dictionary represents a patient.\n",
+        "\n",
+        "    Returns:\n",
+        "    A list of patient data dictionaries.\n",
+        "    \"\"\"\n",
+        "    patients= []\n",
+        "    with open(file_path, 'r') as csvfile:\n",
+        "        reader = csv.DictReader(csvfile)\n",
+        "        for row in reader:\n",
+        "            patients.append(row)\n",
+        "    return patients"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EgwmGMASfIHK"
+        "id": "H_N4bZK04kLa"
       },
       "source": [
         "### Step 5: Main business logic\n",
@@ -222,92 +253,85 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 19,
       "metadata": {
-        "id": "Iev8UC5afIHK"
+        "id": "BOdUWiVr4kLa"
       },
       "outputs": [],
       "source": [
-        "def main(patient_csv, hospital_json, patient_output_file, hospital_output_file):\n",
-        "  patient_results = []\n",
-        "  hospital_output_list = []\n",
+        "def process_patients(patients_csv,patient_output_file,hospital_json,hospital_output_file):\n",
+        "    # Load patient data\n",
+        "    patients = load_patient_data(patients_csv)\n",
         "\n",
-        " #load hospital data\n",
-        "  hospital_data=load_hospital_data(hospital_json)\n",
+        "    patient_results = []\n",
+        "    hospital_data = {}\n",
         "\n",
-        "  with open(patient_csv, 'r') as f:\n",
-        "    reader = csv.DictReader(f)\n",
-        "    for row in reader:\n",
+        "    # Process each patient\n",
+        "    for patient in patients:\n",
+        "        #convert inputs\n",
+        "        height_m = float(patient['HEIGHT_M'])\n",
+        "        weight_kg = float(patient['WEIGHT_KG'])\n",
+        "        fev_pct = float(patient['Fev_pct'])\n",
+        "        dyspnea_description = patient['dyspnea_description']\n",
+        "        distance_in_meters = float(patient['distance_in_meters'])\n",
+        "        hospital = patient['hospital']\n",
         "\n",
-        "      name  = row['sriya']\n",
-        "      height_m = float(row['height_m'])\n",
-        "      weight_kg = float(row['weight_kg'])\n",
-        "      fev_pct = float(row['fev_pct'])\n",
-        "      dyspnea_description = row['dyspnea_description']\n",
-        "      distance_in_meters = float(row['distance_in_meters'])\n",
-        "      hospital = row['hospital']\n",
+        "        # Calculate BMI\n",
+        "        bmi = calculate_bmi(height_m, weight_kg)\n",
         "\n",
-        "      #calculate bmi\n",
-        "      bmi = calculate_bmi(height_m, weight_kg)\n",
+        "        # Calculate BODE score\n",
+        "        bode_score = calculate_bode_score(fev_pct, bmi, distance_in_meters,dyspnea_description)\n",
         "\n",
-        "      #calculate bode score\n",
-        "      bode_score = calculate_bode_score(fev_pct, bmi)\n",
+        "        # Calculate BODE risk\n",
+        "        bode_risk = calculate_bode_risk(bode_score)\n",
         "\n",
-        "      #calculate bode risk\n",
-        "      bode_risk = calculate_bode_risk(bode_score)\n",
+        "        # store the patient result\n",
+        "        patient_results.append({\n",
+        "            'NAME': patient['NAME'],\n",
+        "            'BODE_SCORE': bode_score,\n",
+        "            'BODE_RISK': bode_risk,\n",
+        "            'HOSPITAL': hospital\n",
+        "        })\n",
         "\n",
-        "\n",
-        "      append_patient_results = [{\n",
-        "        'NAME':name,\n",
-        "        'BODE_SCORE': bode_score,\n",
-        "        'BODE_RISK': bode_risk,\n",
-        "        'HOSPITAL': hospital\n",
-        "    }]\n",
-        "    patient_results.extend(append_patient_results)\n",
-        "    #initialize hospital metrics if not already present\n",
-        "\n",
-        "    if hospital_name not in hospital_metrics:\n",
-        "      hospital_metrics[hospital_name] = {'beds': 0, 'copd_count': 0, 'avg_risk': 0, 'avg_score': 0}\n",
-        "\n",
-        "    # update hospital statistics\n",
-        "\n",
-        "    for hospital, stats in hospital_data.items():\n",
-        "            stats['copd_count'] =  stats.get('copd_count',0) +1\n",
-        "            stats['avg_risk'] = stats.get =('avg_risk',0) + bode_risk\n",
-        "            stats['avg_score'] = stats.get('avg_score',0) + (1 if bode_score == 'low risk'else 0)\n",
-        "\n",
-        "    hospital_output_list=[]\n",
-        "\n",
-        "  #calculate hospital metrics\n",
-        "    for hospital, stats in hospital_data.items():\n",
-        "      copd_count = stats['copd_count']\n",
-        "      avg_score = stats['avg_score'] / copd_count\n",
-        "      avg_risk = stats['avg_risk'] / copd_count\n",
-        "\n",
-        "    #Wrte Patient_output.csv\n",
-        "    with open(patient_output_file, 'w', newline='') as f:\n",
-        "        writer = csv.writer(f)\n",
-        "        for result in patient_results:\n",
-        "         writer.writeheader()\n",
-        "         writer.writerow(result)\n",
+        "        # store hospital data\n",
+        "        if hospital not in hospital_data:\n",
+        "            hospital_data[hospital] = {\n",
+        "                'copd_count': 0,\n",
+        "                'total_score': 0,\n",
+        "                'total_risk': []\n",
+        "        }\n",
         "\n",
         "\n",
-        "  #Write Hospital_output.csv\n",
-        "  with open(hospital_output_file, 'w', newline='') as f:\n",
-        "        writer = csv.DictWriter(f, fieldnames=['hospital_name', 'copd_count', 'pct_of_copd_cases_over_beds', 'avg_score', 'avg_risk'])\n",
-        "        writer.writeheader()\n",
-        "        for hospital, stats in hospital_data.items():\n",
-        "            stats['avg_score'] /= stats['copd_count']\n",
-        "            stats['avg_risk'] /= stats['copd_count']\n",
-        "            stats['pct_of_copd_cases_over_beds'] = stats['copd_count'] / stats['beds'] * 100\n",
-        "            writer.writerow({\n",
-        "                 'hospital_name': hospital,\n",
-        "                 'copd_count': stats['copd_count'],\n",
-        "                 'pct_of_copd_cases_over_beds': stats['pct_of_copd_cases_over_beds'],\n",
-        "                 'avg_score': stats['avg_score'],\n",
-        "                 'avg_risk': stats['avg_risk']\n",
-        "             })\n",
-        "\n"
+        "        hospital_data[hospital]['copd_count'] += 1\n",
+        "        hospital_data[hospital]['total_score'] += bode_score\n",
+        "        hospital_data[hospital]['total_risk'].append(bode_risk)\n",
+        "\n",
+        "        # Save patient output\n",
+        "        with open(patient_output_file, 'w', newline='') as  file:\n",
+        "            writer = csv.Dictwriter(file,fieldnames=['NAME','BODE_SCORE','BODE_RISK','HOSPITAL'])\n",
+        "            writer.writeheader()\n",
+        "            writer.writerows(patient_results)\n",
+        "\n",
+        "        # Process hospital statistics\n",
+        "        hospital_results = []\n",
+        "        for hospital, data in hospital_data.items():\n",
+        "            avg_bode_score = data['total_bode_score'] / data['copd_count']\n",
+        "            avg_risk ='/'.join(set(data['total_risk'])) #simplified for now\n",
+        "\n",
+        "\n",
+        "            hospital_results.append({\n",
+        "                'HOSPITAL_NAME': hospital,\n",
+        "                'COPD_COUNT': data['copd_count'],\n",
+        "                'PCT_OF_COPD_CASES_OVER_BEDS': None, # This requires bed data which is n't provided.\n",
+        "                'AVG_SCORE': round(avg_bode_score,2),\n",
+        "                'AVG_RISK': avg_risk\n",
+        "            })\n",
+        "\n",
+        "        # save hospital output\n",
+        "        with open(hospital_output_file, 'w', newline='') as file:\n",
+        "            writer = csv.Dictwriter(file, fieldnames=['HOSPITAL_NAME', 'COPD_COUNT', 'PCT_OF_COPD_CASES_OVER_BEDS', 'AVG_SCORE', 'AVG_RISK'])\n",
+        "            writer.writeheader()\n",
+        "            writer.writerows(hospital_results)"
       ]
     }
   ],
