--- a/week14_assignment.ipynb
+++ b/week14_assignment.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "nbgrader": {
           "grade": false,
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "nbgrader": {
           "grade": false,
@@ -107,28 +107,25 @@
         "answer = None\n",
         "\n",
         "### SOLUTION\n",
-        "cms_data = pd.concat(\n",
-        "    [\n",
-        "        pd.read_csv('https://hds5210-data.s3.amazonaws.com/cms2014.csv').assign(\n",
-        "            year=2014\n",
-        "        ).rename(columns=str.lower),\n",
-        "        pd.read_csv('https://hds5210-data.s3.amazonaws.com/cms2015.csv').assign(\n",
-        "            year=2015\n",
-        "        ).rename(columns=str.lower),\n",
-        "        pd.read_csv('https://hds5210-data.s3.amazonaws.com/cms2016.csv').assign(\n",
-        "            year=2016\n",
-        "        ).rename(columns=str.lower),\n",
-        "    ],\n",
-        "    ignore_index=True\n",
-        ")\n",
+        "cms2014 = pd.read_csv('https://hds5210-data.s3.amazonaws.com/cms2014.csv')\n",
+        "cms2015 = pd.read_csv('https://hds5210-data.s3.amazonaws.com/cms2015.csv')\n",
+        "cms2016 = pd.read_csv('https://hds5210-data.s3.amazonaws.com/cms2016.csv')\n",
         "\n",
-        "answer = cms_data\n",
-        "\n"
+        "cms2014.columns = [a.lower() for a in cms2014.columns]\n",
+        "cms2015.columns = [a.lower() for a in cms2015.columns]\n",
+        "cms2016.columns = [a.lower() for a in cms2016.columns]\n",
+        "\n",
+        "cms2014['year'] = 2014\n",
+        "cms2015['year'] = 2015\n",
+        "cms2016['year'] = 2016\n",
+        "\n",
+        "cms_data= pd.concat([cms2014, cms2015, cms2016], ignore_index=True)\n",
+        "answer=cms_data"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "nbgrader": {
           "grade": true,
@@ -176,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "zEPG9dGVm7xH"
       },
@@ -207,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "nbgrader": {
           "grade": false,
@@ -224,15 +221,17 @@
         "\n",
         "### SOLUTION\n",
         "npi_data = pd.read_csv(' https://hds5210-data.s3.amazonaws.com/npidata.csv', low_memory = False)\n",
-        "###merging cms data files and the npi data file\n",
-        "answer = cms_data.merge(npi_data, how='left', left_on='npi', right_on='NPI')\n",
         "\n",
+        "#merge the cms data files and the npi data file\n",
+        "\n",
+        "combined_data = cms_data.merge(npi_data, how='left', left_on='npi', right_on='NPI')\n",
+        "answer = combined_data\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "nbgrader": {
           "grade": true,
@@ -274,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "nbgrader": {
           "grade": false,
@@ -290,14 +289,14 @@
         "answer = None\n",
         "\n",
         "### SOLUTION\n",
-        "combined_data = combined_data.assign(State=combined_data['Provider Business Mailing Address State Name'].fillna('XX'))\n",
-        "answer = combined_data\n",
+        "combined_data['State'] = combined_data['Provider Business Mailing Address State Name'].fillna('XX')\n",
+        "answer=combined_data\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "nbgrader": {
           "grade": true,
@@ -337,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "nbgrader": {
           "grade": false,
@@ -354,19 +353,15 @@
         "answer = None\n",
         "\n",
         "### SOLUTION\n",
-        "answer = combined_data.pivot_table(\n",
-        "    values='total_services',\n",
-        "    index='State',\n",
-        "    columns='year',\n",
-        "    aggfunc='sum'\n",
-        ")\n",
+        "pivot_table = combined_data.pivot_table(values='total_services', index='State', columns='year', aggfunc='sum')\n",
+        "answer = pivot_table\n",
         "\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "nbgrader": {
           "grade": true,
@@ -388,14 +383,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 490
         },
         "id": "5_nZq_3Rm7xI",
-        "outputId": "a1ef305f-a96a-4bf0-c359-a37425e35959"
+        "outputId": "369e7aba-f313-4038-9fe5-1f584a2ed6fc"
       },
       "outputs": [
         {
@@ -406,7 +401,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 21
         },
         {
           "output_type": "display_data",
@@ -426,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "5wTHt06Tm7xJ"
       },
